--- a/bower.json
+++ b/bower.json
@@ -2,17 +2,17 @@
   "name": "xingwushe",
   "private": true,
   "dependencies": {
+    "modernizr": "~3.2.0",
     "jquery": "~2.1.4",
-    "modernizr": "~2.8.3",
-    "jquery.easing": "~1.3.1",
-    "jquery.localScroll": "~1.4.0",
-    "pretty-photo": "PrettyPhoto#~1.0.1",
-    "jquery-validation": "~1.14.0",
-    "jquery-sticky": "sticky#~1.0.3",
-    "protonet/jquery.inview": "jquery.inview#~1.0.0"
-  },
-  "devDependencies": {
     "chai": "~3.4.2",
-    "mocha": "~2.3.4"
+    "mocha": "~2.3.4",
+    "jquery.localScroll": "~1.4.0",
+    "isotope": "~2.2.2",
+    "jquery-sticky": "~1.0.3",
+    "jcarousel": "~0.3.4",
+    "jquery.easing": "~1.3.1",
+    "jquery-powertip-dist": "~1.2.0",
+    "parallax": "~2.1.3",
+    "pretty-photo": "~1.0.1"
   }
 }
